--- a/Final Project/style.css
+++ b/Final Project/style.css
@@ -24,7 +24,7 @@
     width:60%;
     height:100%;
     margin: 0 auto;
-    background-color:grey;
+    background-color: lightgray;
     border-style: groove;
     border-color: black;
     text-align: center;
