--- a/Final Project/style.css
+++ b/Final Project/style.css
@@ -2,7 +2,7 @@
     width:100%;
     height:600px;
 }
-#playerList {
+#players {
     width:20%;
     height:100%;
     float:left;
@@ -28,4 +28,7 @@
     border-style: groove;
     border-color: black;
     text-align: center;
+}
+#playerTable{
+    background-color: rgb(207,185,151);
 }
